@@ -29,14 +29,12 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.api.services.docs.v1.model.DeleteContentRangeRequest;
-import com.google.api.services.docs.v1.model.DeleteNamedRangeRequest;
 import com.google.api.services.docs.v1.model.Dimension;
 import com.google.api.services.docs.v1.model.Document;
 import com.google.api.services.docs.v1.model.Range;
 import com.google.api.services.docs.v1.model.Request;
 import com.google.api.services.docs.v1.model.Size;
 import com.google.api.services.docs.v1.model.Table;
-
 
 import uk.co.terminological.rjava.UnconvertableTypeException;
 import uk.co.terminological.rjava.types.RBoundDataframe;
@@ -58,9 +56,12 @@ public class RDocument {
 
 	protected static String INLINE_FIELDS = "body(content(startIndex,endIndex,paragraph(elements(endIndex,startIndex,textRun(content))))),namedRanges";
 	protected static String STRUCTURAL_ELEMENTS = "body(content(startIndex,endIndex,paragraph(elements(endIndex,startIndex,textRun(content))),table(columns,rows)))";
+	protected static String TEXT_LINK_ELEMENTS = "body(content(startIndex,endIndex,paragraph(elements(endIndex,startIndex,textRun(content,textStyle(link(url)))))))";
+	protected static String TEXT_AND_IMAGE_LINK_ELEMENTS = "body(content(startIndex,endIndex,paragraph(elements(endIndex,startIndex,textRun(content,textStyle(link(url))),inlineObjectElement(textStyle(link(url)))))))";
 	protected static String TABLES_ONLY = "body(content(startIndex,endIndex,table(columns,rows)))";
 	protected static String TABLES_AND_CELLS = "body(content(startIndex,endIndex,table(tableRows(tableCells(endIndex,startIndex,tableCellStyle(columnSpan,rowSpan))))))"; //(tableCells(content(startIndex,endIndex,tableCellStyle(columnSpan,rowSpan))))))";
-	protected static String IMAGE_POSITIONS = "body(content(startIndex,endIndex,paragraph(elements(endIndex,startIndex,inlineObjectElement))))";
+	protected static String IMAGE_POSITIONS = "inlineObjects(*),body(content(startIndex,endIndex,paragraph(elements(endIndex,startIndex,inlineObjectElement(*)))))";
+	// protected static String IMAGE_SIZES = "body(content(startIndex,endIndex,paragraph(elements(endIndex,startIndex,inlineObjectElement(textStyle(link(url)))))))";
 	protected static String MINIMAL = "body(content(startIndex,endIndex))";
 	protected static String NAMED_RANGES = "namedRanges";
 	
@@ -75,31 +76,64 @@ public class RDocument {
 		this.docId = docId;
 	}
 
+//	public Map<String,TupleList<Integer,Integer>> updateInlineTags() throws IOException {
+//		Document doc = getDoc(INLINE_FIELDS);
+//		RequestBuilder requests = new RequestBuilder(this);
+//		
+//		Map<String,TupleList<Integer,Integer>> tl = new HashMap<>();
+//		ofNullable(doc.getNamedRanges())
+//			.flatMap(nr -> ofNullable(nr.values()))
+//			.flatMap(nrl -> ofNullable(nrl.getNamedRanges()))
+//			.forEach(nr -> {
+//				ofNullable(nr.getRanges())
+//				.forEach(r -> {
+//					String name = nr.getName();
+//					if (!tl.containsKey(name))	tl.put(name, TupleList.create());
+//					TupleList<Integer, Integer> tl2 = tl.get(name);
+//					Tuple<Integer,Integer> t2 = Tuple.create(r.getStartIndex(), r.getEndIndex());
+//					if (tl2.contains(t2)) {
+//						// delete this range if a duplicate present in the named ranges
+//						requests.add(new Request().setDeleteNamedRange(new DeleteNamedRangeRequest().setNamedRangeId(nr.getNamedRangeId())));
+//					} else {
+//						tl2.add(t2);
+//					}
+//				});
+//			});
+//			
+//		
+//		elements(doc)
+//			.forEach(e -> {
+//				text(e)
+//				.forEach(s -> {
+//					//Pattern r = Pattern.compile("\\{\\{"+tagName+"([^\\}]*)\\}\\}");
+//					Pattern r = Pattern.compile("\\{\\{([^\\}]+)\\}\\}");
+//					Matcher m = r.matcher(s);
+//					while(m.find()) {
+//						String name =  s.substring(m.start(1), m.end(1));
+//						if (!tl.containsKey(name))	tl.put(name, TupleList.create());
+//						TupleList<Integer, Integer> tl2 = tl.get(name);
+//						Tuple<Integer, Integer> match = Tuple.create(e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
+//						if (!tl2.contains(match)) {
+//							// Only add if donesn't already exist
+//							requests.createNamedRange(name, e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
+//							tl2.add(match);
+//						}
+//						
+//					}
+//				});
+//			});
+//
+//		requests.sendRequest();
+//		
+//		return tl;
+//
+//	}
+
 	public Map<String,TupleList<Integer,Integer>> updateInlineTags() throws IOException {
-		Document doc = getDoc(INLINE_FIELDS);
+		Document doc = getDoc(TEXT_AND_IMAGE_LINK_ELEMENTS);
 		RequestBuilder requests = new RequestBuilder(this);
 		
-		Map<String,TupleList<Integer,Integer>> tl = new HashMap<>();
-		ofNullable(doc.getNamedRanges())
-			.flatMap(nr -> ofNullable(nr.values()))
-			.flatMap(nrl -> ofNullable(nrl.getNamedRanges()))
-			.forEach(nr -> {
-				ofNullable(nr.getRanges())
-				.forEach(r -> {
-					String name = nr.getName();
-					if (!tl.containsKey(name))	tl.put(name, TupleList.create());
-					TupleList<Integer, Integer> tl2 = tl.get(name);
-					Tuple<Integer,Integer> t2 = Tuple.create(r.getStartIndex(), r.getEndIndex());
-					if (tl2.contains(t2)) {
-						// delete this range if a duplicate present in the named ranges
-						requests.add(new Request().setDeleteNamedRange(new DeleteNamedRangeRequest().setNamedRangeId(nr.getNamedRangeId())));
-					} else {
-						tl2.add(t2);
-					}
-				});
-			});
-			
-		
+		Map<String,TupleList<Integer,Integer>> tl = DocumentHelper.findLinks(doc);
 		elements(doc)
 			.forEach(e -> {
 				text(e)
@@ -109,15 +143,17 @@ public class RDocument {
 					Matcher m = r.matcher(s);
 					while(m.find()) {
 						String name =  s.substring(m.start(1), m.end(1));
+						// TODO: maybe this is no longer needed now we are not dealing with named ranges?
 						if (!tl.containsKey(name))	tl.put(name, TupleList.create());
 						TupleList<Integer, Integer> tl2 = tl.get(name);
 						Tuple<Integer, Integer> match = Tuple.create(e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
+						// TODO: check here. What happens if the text of the link has been updated but the link is still in place.
+						// I think this is working but need to check
 						if (!tl2.contains(match)) {
 							// Only add if donesn't already exist
-							requests.createNamedRange(name, e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
+							requests.createLinkTag(name, e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
 							tl2.add(match);
 						}
-						
 					}
 				});
 			});
@@ -127,26 +163,65 @@ public class RDocument {
 		return tl;
 
 	}
-
+	
+//	public void updateTaggedText(String tagName, String newText) throws IOException {
+//
+//		// Fetch the document to determine the current indexes of the named ranges.
+//		// Find the matching named ranges.
+//		log.info("Autotext replacing: {{"+tagName+"}} with "+newText);
+//		updateInlineTags();
+//		Document document = getDoc(NAMED_RANGES);
+//		
+//		List<Range> allRanges = new ArrayList<>();
+//		Set<Integer> insertIndexes = new HashSet<>();
+//		
+//		// RDocument.TEXT_LINK_ELEMENTS
+//		
+//		ofNullable(document.getNamedRanges())
+//			.flatMap(nr -> ofNullable(nr.get(tagName)))
+//			.flatMap(nrl -> ofNullable(nrl.getNamedRanges()))
+//			.forEach(namedRange -> {
+//				allRanges.addAll(namedRange.getRanges());
+//				insertIndexes.add(namedRange.getRanges().get(0).getStartIndex());
+//			});
+//
+//		// Sort the list of ranges by startIndex, in descending order.
+//		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
+//
+//		// Create a sequence of requests for each range.
+//		RequestBuilder requests = new RequestBuilder(this);
+//		for (Range range : allRanges) {
+//			// Delete all the content in the existing range.
+//			requests.deleteContent(range);
+//
+//			if (insertIndexes.contains(range.getStartIndex())) {
+//				// Insert the replacement text.
+//				Range newRange = requests.insertTextContent(range.getStartIndex(),newText, Optional.empty());
+//
+//				// Re-create the named range on the new text.
+//				requests.createNamedRange(tagName, newRange);
+//			}
+//		}
+//
+//		requests.sendRequest();
+//	}
+	
 	public void updateTaggedText(String tagName, String newText) throws IOException {
 
 		// Fetch the document to determine the current indexes of the named ranges.
 		// Find the matching named ranges.
 		log.info("Autotext replacing: {{"+tagName+"}} with "+newText);
-		updateInlineTags();
-		Document document = getDoc(NAMED_RANGES);
+		Map<String, TupleList<Integer, Integer>> lm = updateInlineTags();
 		
 		List<Range> allRanges = new ArrayList<>();
 		Set<Integer> insertIndexes = new HashSet<>();
 		
-		ofNullable(document.getNamedRanges())
-			.flatMap(nr -> ofNullable(nr.get(tagName)))
-			.flatMap(nrl -> ofNullable(nrl.getNamedRanges()))
-			.forEach(namedRange -> {
-				allRanges.addAll(namedRange.getRanges());
-				insertIndexes.add(namedRange.getRanges().get(0).getStartIndex());
+		lm.getOrDefault(tagName, TupleList.create()).stream()
+			.forEach(t -> {
+				allRanges.add(new Range().setStartIndex(t.getFirst()).setEndIndex(t.getSecond()));
+				insertIndexes.add(t.getFirst());
 			});
-
+		
 		// Sort the list of ranges by startIndex, in descending order.
 		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
 
@@ -161,7 +236,7 @@ public class RDocument {
 				Range newRange = requests.insertTextContent(range.getStartIndex(),newText, Optional.empty());
 
 				// Re-create the named range on the new text.
-				requests.createNamedRange(tagName, newRange);
+				requests.createLinkTag(tagName, newRange);
 			}
 		}
 
@@ -179,35 +254,84 @@ public class RDocument {
 		updateTaggedImage(tagName, imageLink, false, size);
 	}
 	
+//	public void updateTaggedImage(String tagName, URI imageLink, boolean useGoogleDocSize, Size size) throws IOException {
+//
+//		// Fetch the document to determine the current indexes of the named ranges.
+//		// Find the matching named ranges.
+//		log.info("Autotext replacing: {{"+tagName+"}} with image: "+imageLink);
+//		updateInlineTags();
+//		Document document = getDoc();
+//		// System.out.print(document.toPrettyString());
+//		
+//		List<Range> allRanges = new ArrayList<>();
+//		Set<Integer> insertIndexes = new HashSet<>();
+//		
+//		ofNullable(document.getNamedRanges())
+//			.flatMap(nr -> ofNullable(nr.get(tagName)))
+//			.flatMap(nrl -> ofNullable(nrl.getNamedRanges()))
+//			.forEach(namedRange -> {
+//				allRanges.addAll(namedRange.getRanges());
+//				insertIndexes.add(namedRange.getRanges().get(0).getStartIndex());
+//			});
+//		
+//		// Sort the list of ranges by startIndex, in descending order.
+//		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
+//
+//		Map<Integer,Size> imageSizes = imageSizes(document);
+//		
+//		// Create a sequence of requests for each range.
+//		RequestBuilder requests = new RequestBuilder(this);
+//		for (Range range : allRanges) {
+//			// Delete all the content in the existing range.
+//			requests.add(
+//					new Request().setDeleteContentRange(new DeleteContentRangeRequest().setRange(range)));
+//
+//			if (insertIndexes.contains(range.getStartIndex())) {
+//				// Insert the replacement image.
+//				
+//				if (useGoogleDocSize && imageSizes.containsKey(range.getStartIndex())) {
+//					size = imageSizes.get(range.getStartIndex());
+//				}
+//				
+//				Range newRange = requests.insertImage(imageLink, range.getStartIndex(), size);
+//
+//				// Re-create the named range on the new text.
+//				requests.createNamedRange(tagName, newRange);
+//			}
+//		}
+//
+//		requests.sendRequest();
+//		
+//	}
+//	
+
 	public void updateTaggedImage(String tagName, URI imageLink, boolean useGoogleDocSize, Size size) throws IOException {
 
 		// Fetch the document to determine the current indexes of the named ranges.
 		// Find the matching named ranges.
 		log.info("Autotext replacing: {{"+tagName+"}} with image: "+imageLink);
-		updateInlineTags();
-		Document document = getDoc();
-		// System.out.print(document.toPrettyString());
+		Map<String, TupleList<Integer, Integer>> lm = updateInlineTags();
 		
 		List<Range> allRanges = new ArrayList<>();
 		Set<Integer> insertIndexes = new HashSet<>();
 		
-		ofNullable(document.getNamedRanges())
-			.flatMap(nr -> ofNullable(nr.get(tagName)))
-			.flatMap(nrl -> ofNullable(nrl.getNamedRanges()))
-			.forEach(namedRange -> {
-				allRanges.addAll(namedRange.getRanges());
-				insertIndexes.add(namedRange.getRanges().get(0).getStartIndex());
+		lm.getOrDefault(tagName, TupleList.create()).stream()
+			.forEach(t -> {
+				allRanges.add(new Range().setStartIndex(t.getFirst()).setEndIndex(t.getSecond()));
+				insertIndexes.add(t.getFirst());
 			});
 		
 		// Sort the list of ranges by startIndex, in descending order.
 		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
 
+		Document document = getDoc(IMAGE_POSITIONS);
+		// System.out.print(document.toPrettyString());
 		Map<Integer,Size> imageSizes = imageSizes(document);
 		
 		// Create a sequence of requests for each range.
 		RequestBuilder requests = new RequestBuilder(this);
 		for (Range range : allRanges) {
-			// Delete all the content in the existing range.
+			// Delete all the content in the existing range (including link).
 			requests.add(
 					new Request().setDeleteContentRange(new DeleteContentRangeRequest().setRange(range)));
 
@@ -220,8 +344,8 @@ public class RDocument {
 				
 				Range newRange = requests.insertImage(imageLink, range.getStartIndex(), size);
 
-				// Re-create the named range on the new text.
-				requests.createNamedRange(tagName, newRange);
+				// Re-create the link on the new text.
+				requests.createLinkTag(tagName, newRange);
 			}
 		}
 
@@ -229,27 +353,72 @@ public class RDocument {
 		
 	}
 	
+	public void removeTags() throws IOException {
+		Document document = getDoc(TEXT_AND_IMAGE_LINK_ELEMENTS);
+		
+		Map<String,TupleList<Integer,Integer>> tl = DocumentHelper.findLinks(document);
+		
+		List<Range> allRanges = new ArrayList<>();
+		//HashMap<Integer,String> insertIndexes = new HashMap<>();
+
+		// Determine all the ranges of text to be removed, and at which indexes the replacement text
+		// should be inserted.
+		tl.entrySet().stream().forEach(e -> {
+			// String tagName = e.getKey();
+			e.getValue().stream().forEach( t -> {
+				Range r = new Range()
+						.setStartIndex(t.getFirst())
+						.setEndIndex(t.getSecond());
+				allRanges.add(r);
+				// insertIndexes.put(t.getFirst(), tagName);
+			});
+		});
+		
+		
+		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
+		
+		RequestBuilder requests = new RequestBuilder(this);
+		for (Range range : allRanges) {
+			requests.removeLink(range);
+		}
+		requests.sendRequest();
+	}
+	
 	public void revertTags() throws IOException {
 
 		// Fetch the document to determine the current indexes of the named ranges.
 		// Find the matching named ranges.
-		Document document = getDoc(NAMED_RANGES);
+		Document document = getDoc(TEXT_AND_IMAGE_LINK_ELEMENTS);
+		
+		Map<String,TupleList<Integer,Integer>> tl = DocumentHelper.findLinks(document);
 		
 		List<Range> allRanges = new ArrayList<>();
 		HashMap<Integer,String> insertIndexes = new HashMap<>();
 
 		// Determine all the ranges of text to be removed, and at which indexes the replacement text
 		// should be inserted.
-		ofNullable(document.getNamedRanges())
-			.flatMap(nr -> nr.entrySet().stream())
-			.forEach(e -> {
-				String tagName = e.getKey();
-				ofNullable(e.getValue().getNamedRanges())
-					.forEach( namedRange -> {
-						allRanges.addAll(namedRange.getRanges());
-						insertIndexes.put(namedRange.getRanges().get(0).getStartIndex(), tagName);
-					});
+		tl.entrySet().stream().forEach(e -> {
+			String tagName = e.getKey();
+			e.getValue().stream().forEach( t -> {
+				Range r = new Range()
+						.setStartIndex(t.getFirst())
+						.setEndIndex(t.getSecond());
+				allRanges.add(r);
+				insertIndexes.put(t.getFirst(), tagName);
 			});
+		});
+		
+		
+//		ofNullable(document.getNamedRanges())
+//			.flatMap(nr -> nr.entrySet().stream())
+//			.forEach(e -> {
+//				String tagName = e.getKey();
+//				ofNullable(e.getValue().getNamedRanges())
+//					.forEach( namedRange -> {
+//						allRanges.addAll(namedRange.getRanges());
+//						insertIndexes.put(namedRange.getRanges().get(0).getStartIndex(), tagName);
+//					});
+//			});
 		
 		// Sort the list of ranges by startIndex, in descending order.
 		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
